<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Resumen">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="10dp"
        android:checkedButton="@id/rB1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@mipmap/uisarel" />

        <TextView
            android:id="@+id/q4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/qFour" />

        <TextView
            android:id="@+id/r4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/userNameRes" />

        <TextView
            android:id="@+id/q5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/qFive" />

        <TextView
            android:id="@+id/r5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <TextView
            android:id="@+id/q6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/qSix" />

        <TextView
            android:id="@+id/r6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <TextView
            android:id="@+id/q1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/qOne" />

        <TextView
            android:id="@+id/q11"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pollOne" />

        <TextView
            android:id="@+id/r1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <TextView
            android:id="@+id/q2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/qTwo" />

        <TextView
            android:id="@+id/q21"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pollTwo" />

        <TextView
            android:id="@+id/r2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <TextView
            android:id="@+id/q3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/qThree" />

        <TextView
            android:id="@+id/q31"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/pollThree" />

        <TextView
            android:id="@+id/r3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>